v0.8/_sources/examples/ndbc/buoy_type_request.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_examples_ndbc_buoy_type_request.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_ndbc_buoy_type_request.py:


NDBC Buoy Data Request (of any type)
====================================

The NDBC keeps a 40-day recent rolling file for each buoy. This examples shows how to access
the other types of data available for a buoy.


.. code-block:: python


    from siphon.simplewebservice.ndbc import NDBC







Request the types of data available from a given buoy.


.. code-block:: python

    data_aval = NDBC.buoy_data_types('41002')
    print(data_aval)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    {'txt': 'standard meteorological data', 'spec': 'spectral wave summaries', 'data_spec': 'raw spectral wave data', 'swdir': 'spectral wave data (alpha1)', 'swdir2': 'spectral wave data (alpha2)', 'swr1': 'spectral wave data (r1)', 'swr2': 'spectral wave data (r2)', 'supl': 'supplemental measurements data'}


Get a pandas data frame of all of the observations, meteorological data is the default
observation set to query.


.. code-block:: python

    df = NDBC.realtime_observations('41002', data_type='supl')
    df.head()






**Total running time of the script:** ( 0 minutes  7.660 seconds)


.. _sphx_glr_download_examples_ndbc_buoy_type_request.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: buoy_type_request.py <buoy_type_request.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: buoy_type_request.ipynb <buoy_type_request.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
