v0.10/_sources/examples/ndbc/buoy_type_request.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/ndbc/buoy_type_request.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_ndbc_buoy_type_request.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_ndbc_buoy_type_request.py:


NDBC Buoy Data Request (of any type)
====================================

The NDBC keeps a 40-day recent rolling file for each buoy. This examples shows how to access
the other types of data available for a buoy.

.. GENERATED FROM PYTHON SOURCE LINES 11-14

.. code-block:: Python


    from siphon.simplewebservice.ndbc import NDBC








.. GENERATED FROM PYTHON SOURCE LINES 15-16

Request the types of data available from a given buoy.

.. GENERATED FROM PYTHON SOURCE LINES 16-19

.. code-block:: Python

    data_aval = NDBC.buoy_data_types('42001')
    print(data_aval)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    {'txt': 'standard meteorological data', 'supl': 'supplemental measurements data'}




.. GENERATED FROM PYTHON SOURCE LINES 20-22

Get a pandas data frame of all of the observations, meteorological data is the default
observation set to query.

.. GENERATED FROM PYTHON SOURCE LINES 22-24

.. code-block:: Python

    df = NDBC.realtime_observations('42001', data_type='supl')
    df.head()





.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div>
    <style scoped>
        .dataframe tbody tr th:only-of-type {
            vertical-align: middle;
        }

        .dataframe tbody tr th {
            vertical-align: top;
        }

        .dataframe thead th {
            text-align: right;
        }
    </style>
    <table border="1" class="dataframe">
      <thead>
        <tr style="text-align: right;">
          <th></th>
          <th>hourly_low_pressure</th>
          <th>hourly_low_pressure_time</th>
          <th>hourly_high_wind</th>
          <th>hourly_high_wind_direction</th>
          <th>hourly_high_wind_time</th>
          <th>time</th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <th>0</th>
          <td>NaN</td>
          <td>NaT</td>
          <td>20</td>
          <td>NaN</td>
          <td>2025-01-22 00:47:00+00:00</td>
          <td>2025-01-22 00:50:00+00:00</td>
        </tr>
        <tr>
          <th>1</th>
          <td>NaN</td>
          <td>NaT</td>
          <td>19</td>
          <td>NaN</td>
          <td>2025-01-22 00:33:00+00:00</td>
          <td>2025-01-22 00:40:00+00:00</td>
        </tr>
        <tr>
          <th>2</th>
          <td>NaN</td>
          <td>NaT</td>
          <td>19</td>
          <td>NaN</td>
          <td>2025-01-22 00:24:00+00:00</td>
          <td>2025-01-22 00:30:00+00:00</td>
        </tr>
        <tr>
          <th>3</th>
          <td>NaN</td>
          <td>NaT</td>
          <td>19</td>
          <td>NaN</td>
          <td>2025-01-22 00:16:00+00:00</td>
          <td>2025-01-22 00:20:00+00:00</td>
        </tr>
        <tr>
          <th>4</th>
          <td>NaN</td>
          <td>NaT</td>
          <td>21</td>
          <td>NaN</td>
          <td>2025-01-22 00:06:00+00:00</td>
          <td>2025-01-22 00:10:00+00:00</td>
        </tr>
      </tbody>
    </table>
    </div>
    </div>
    <br />
    <br />


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 2.357 seconds)


.. _sphx_glr_download_examples_ndbc_buoy_type_request.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: buoy_type_request.ipynb <buoy_type_request.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: buoy_type_request.py <buoy_type_request.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: buoy_type_request.zip <buoy_type_request.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
